# overclock

./: Cargo.toml  LICENSE  README.md
.trae/specs/create-multi-agent-platform/: checklist.md  spec.md  tasks.md
docs/: agent-fork-design.md  memory-design.md  multi-agent-design.md  pending-features.md
src/: agent_manager.rs  cli.rs  config.rs  error.rs  main.rs  role.rs
src/commands/: agent.rs  init.rs  mod.rs  run.rs
template/: CORE_GUIDELINES.md
template/.ai/: architecture.md  config.toml  feature_list.md  progress.md
template/.ai/prompts/: architect_prompt.md  developer_prompt.md  pm_prompt.md  reviewer_prompt.md  tester_prompt.md
